add mistral loader
